--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,66 @@
-streamlit
-pandas
-pdfplumber
-python-docx
-rapidfuzz
-google-genai
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.10.0
+attrs==25.3.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.3
+click==8.2.1
+colorama==0.4.6
+cryptography==45.0.6
+distro==1.9.0
+gitdb==4.0.12
+GitPython==3.1.45
+google-auth==2.40.3
+google-genai==1.31.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+Jinja2==3.1.6
+jiter==0.10.0
+jsonschema==4.25.1
+jsonschema-specifications==2025.4.1
+lxml==6.0.0
+MarkupSafe==3.0.2
+narwhals==2.1.2
+numpy==2.3.2
+openai==1.100.2
+packaging==25.0
+pandas==2.3.1
+pdfminer.six==20250506
+pdfplumber==0.11.7
+pillow==11.3.0
+protobuf==6.32.0
+pyarrow==21.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pydantic==2.11.7
+pydantic_core==2.33.2
+pydeck==0.9.1
+pypdfium2==4.30.0
+python-dateutil==2.9.0.post0
+python-docx==1.2.0
+pytz==2025.2
+RapidFuzz==3.13.0
+referencing==0.36.2
+requests==2.32.5
+rpds-py==0.27.0
+rsa==4.9.1
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+streamlit==1.48.1
+tenacity==9.1.2
+toml==0.10.2
+tornado==6.5.2
+tqdm==4.67.1
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
+watchdog==6.0.0
+websockets==15.0.1
