--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ click==8.2.1
 colorama==0.4.6
 cryptography==45.0.6
 distro==1.9.0
+dnspython==2.7.0
 gitdb==4.0.12
 GitPython==3.1.45
 google-auth==2.40.3
@@ -41,6 +42,7 @@ pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
 pydeck==0.9.1
+pymongo==4.14.1
 pypdfium2==4.30.0
 python-dateutil==2.9.0.post0
 python-docx==1.2.0
