--- a/requirements.txt
+++ b/requirements.txt
@@ -2,67 +2,107 @@ altair==5.5.0
 annotated-types==0.7.0
 anyio==4.10.0
 attrs==25.3.0
+beautifulsoup4==4.13.4
 blinker==1.9.0
-cachetools==5.5.2
+blis==1.3.0
+cachetools==6.1.0
+catalogue==2.0.10
 certifi==2025.8.3
 cffi==1.17.1
 charset-normalizer==3.4.3
 click==8.2.1
+cloudpathlib==0.21.1
 colorama==0.4.6
+confection==0.1.5
+contourpy==1.3.1
 cryptography==45.0.6
+curl_cffi==0.13.0
+cycler==0.12.1
+cymem==2.0.11
 distro==1.9.0
-dnspython==2.7.0
+docx2txt==0.9
+fonttools==4.56.0
+frozendict==2.4.6
 gitdb==4.0.12
 GitPython==3.1.45
-google-auth==2.40.3
-google-genai==1.31.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 Jinja2==3.1.6
 jiter==0.10.0
+joblib==1.4.2
 jsonschema==4.25.1
 jsonschema-specifications==2025.4.1
+kiwisolver==1.4.8
+langcodes==3.5.0
+language_data==1.3.0
 lxml==6.0.0
+marisa-trie==1.3.0
+markdown-it-py==4.0.0
 MarkupSafe==3.0.2
+matplotlib==3.10.0
+mdurl==0.1.2
+multitasking==0.0.12
+murmurhash==1.0.13
 narwhals==2.1.2
-numpy==2.3.2
+numpy==2.2.3
 openai==1.100.2
-packaging==25.0
-pandas==2.3.1
+packaging==24.2
+pandas==2.2.3
 pdfminer.six==20250506
 pdfplumber==0.11.7
-pillow==11.3.0
+peewee==3.18.2
+pillow==11.1.0
+platformdirs==4.3.8
+preshed==3.0.10
 protobuf==6.32.0
 pyarrow==21.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
 pydeck==0.9.1
-pymongo==4.14.1
+Pygments==2.19.2
+pyparsing==3.2.1
+PyPDF2==3.0.1
 pypdfium2==4.30.0
 python-dateutil==2.9.0.post0
 python-docx==1.2.0
-pytz==2025.2
+pytz==2025.1
 RapidFuzz==3.13.0
 referencing==0.36.2
 requests==2.32.5
+rich==14.1.0
 rpds-py==0.27.0
-rsa==4.9.1
+scikit-learn==1.6.1
+scipy==1.15.2
+seaborn==0.13.2
+shellingham==1.5.4
 six==1.17.0
+smart_open==7.3.0.post1
 smmap==5.0.2
 sniffio==1.3.1
+soupsieve==2.7
+spacy==3.8.7
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.1
 streamlit==1.48.1
 tenacity==9.1.2
+thinc==8.3.6
+threadpoolctl==3.5.0
 toml==0.10.2
 tornado==6.5.2
 tqdm==4.67.1
+typer==0.16.1
 typing-inspection==0.4.1
 typing_extensions==4.14.1
-tzdata==2025.2
+tzdata==2025.1
 urllib3==2.5.0
+wasabi==1.1.3
 watchdog==6.0.0
+weasel==0.4.1
 websockets==15.0.1
+wrapt==1.17.3
+xlsxwriter==3.2.5
+yfinance==0.2.65
